<resources>
    <string name="app_name">"畅问"</string>
    <string name="submitText">提 交</string>
    <string name="QuestionToMe">向 我 提 问</string>
    <string name="welcome">Welcome!</string>
    <string name="phoneNum">手机号</string>
    <string name="password">密 码</string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>
    <string name="inputName">请输入你的昵称</string>
    <string name="inputPhone">请输入手机号码</string>
    <string name="inputPassword">请输入密码</string>
    <string name="inputValidCode">请输入验证码</string>
    <string name="acquireValidCode">获取验证码</string>
    <string name="one">一</string>
    <string name="MoreOpt">更多操作</string>
    <string name="Delete">删除</string>
    <string name="HomePage">首 页</string>
    <string name="FriendPage">交 友</string>
    <string name="MyselfPage">我 的</string>
    <string name="BackButton">Back Button</string>
    <string name="inputID">请输入好友ID</string>
    <string name="QuestionExample">这是一个问题</string>
    <string name="TimeExample">2023-06-14 23:20</string>
    <string name="DotsExample">···</string>
    <string name="AnsExample">这是一个回答这是一个回答这是一个回答这是一个回答这是一个回答这是一个回答这是一个回答这是一个回答这是一个回答这是一个回答这是一个回答这是一个回答这是一个回答这是一个回答这是一个回答这是一个回答</string>
    <string name="SimpleAnsExample">这是一个回答</string>
    <string name="TimeExample2">提问于 2023-06-14 16:17</string>
    <string name="Attention">关 注</string>
    <string name="Fans">粉 丝</string>
    <string name="NoAnswer">未答</string>
    <string name="haveAnswer">已答</string>
    <string name="NoAnswer2">未回答</string>
    <string name="haveAnswer2">有回答</string>
    <string name="Name2">昵称</string>
    <string name="MyName">我的昵称</string>
    <string name="Edit">编辑</string>
    <string name="MyPassword">我的密码</string>
    <string name="MyPhone">我绑定的手机号</string>
    <string name="Exit">退出登录</string>
    <string name="AddFriend">添加新好友</string>
</resources>