<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:windowSoftInputMode="adjustResize|stateHidden"
    tools:context=".view.RegisterActivity">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/name"
            android:layout_marginRight="58dp"
            android:layout_marginLeft="58dp"
            android:layout_marginTop="340dp"
            android:autofillHints="autofillHintText"
            android:inputType="text"
            android:hint="@string/inputName">
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/phone"
            android:layout_marginRight="58dp"
            android:layout_marginLeft="58dp"
            android:layout_marginTop="40dp"
            android:inputType="phone"
            android:autofillHints="autofillHintText"
            android:hint="@string/inputPhone">
        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="58dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="58dp"
            android:autofillHints="autofillHintText"
            android:inputType="textPassword"
            android:hint="@string/inputPassword">
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/code"
                android:layout_width="190dp"
                android:layout_height="40dp"
                android:layout_marginStart="58dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:autofillHints="autofillHintText"
                android:inputType="text"
                android:hint="@string/inputValidCode">
            </EditText>

            <Button
                android:id="@+id/get_code"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginTop="28dp"
                android:text="@string/acquireValidCode"
                android:textSize="15sp"
                android:background="@drawable/button_bg"
                android:textColor="@color/white">
            </Button>

        </LinearLayout>


        <Button
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:id="@+id/commit"
            android:text="@string/submitText"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/button_bg"
            android:layout_marginTop="25dp">
        </Button>
</LinearLayout>
