<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheetLayout"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center" >
        <TextView
            android:id="@+id/prompt_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/one"
            android:textSize="40sp"
            android:textColor="#efefef"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <TextView
            android:id="@+id/bottomSheetHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-15dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/MoreOpt"
            android:textAppearance="@android:style/TextAppearance.Large" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center" >
        <Button
            android:id="@+id/deletebutton"
            android:background="#f8f8f8"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/Delete" />
    </LinearLayout>
</LinearLayout>

