<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:baselineAligned="false">
        <LinearLayout
            android:id="@+id/id_QmeUnanswered"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/id_QmeUnanswered_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"

                android:text="@string/NoAnswer"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/id_QmeAnswered"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/id_QmeAnswered_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/haveAnswer"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/id_meQUnanswered"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/id_meQUnanswered_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/NoAnswer2"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/id_meQAnswered"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/id_meQAnswered_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/haveAnswer2"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/listview_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:id="@+id/listview_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="2px">
        </ListView>
    </LinearLayout>

</LinearLayout>